--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  outline: none;
+}
+
+body {
+  background-image: url(https://puzzleit.ru/files/puzzles/211/210738/_original.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#title {
+  font-size: 32px;
+  font-weight: 800;
+  padding: 20px 0;
+  color: rgb(220, 54, 142);
+  font-style: italic;
+  text-shadow: 4px 2px 1px #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#task-list {
+  width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgb(170, 213, 235);
+  border-radius: 20px;
+  border: 1px solid #fefefe;
+  max-height: 800px;
+  overflow-y: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.task {
+  display: flex;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 5px 0;
+  background-color: rgb(185, 141, 190);
+  justify-content: space-between;
+  text-align: left;
+}
+
+.task-info {
+  padding-right: 20px;
+}
+
+.task-actions {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-width: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.task-name {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 6px;
+  color: rgb(226, 223, 239);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-description {
+  font-size: 14px;
+  color: rgb(226, 222, 225);
+  text-align: justify;
+  margin-bottom: 6px;
+}
+
+.task-completed {
+  font-size: 13px;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.complete-button {
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+  background-color: #fae7f0;
+  color: rgb(37, 36, 36);
+  width: 90px;
+  cursor: pointer;
+}
+
+.complete-button:hover {
+  background-color: #fa70b1;
+  color: #fff;
 }
