--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,12 +1,11 @@
 .App {
   text-align: center;
-}
-
-#title {
-  font-size: 32px;
-  font-weight: 800;
-  padding: 20px 0;
-  color: rgb(220, 54, 142);
-  font-style: italic;
-  text-shadow: 4px 2px 1px #fff;
+  background-image: url(https://puzzleit.ru/files/puzzles/211/210738/_original.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
