--- a/src/components/ProjectList/ProjectList.module.scss
+++ b/src/components/ProjectList/ProjectList.module.scss
@@ -1,6 +1,6 @@
 @import "../../vars.module.scss";
 
-.task-list {
+.project-list {
   width: 600px;
   margin: 0 auto;
   padding: 20px;
@@ -18,17 +18,6 @@
     border: 1px solid $border-color-dark;
   }
 
-  &-no-tasks {
-    font-size: 16px;
-
-    &-light {
-      color: $title-color-light;
-    }
-    &-dark {
-      color: $title-color-dark;
-    }
-  }
-
   &-title {
     font-size: 22px;
     margin-bottom: 20px;
@@ -40,5 +29,9 @@
     &-dark {
       color: $title-color-dark;
     }
+  }
+
+  a {
+    text-decoration: none;
   }
 }
