--- a/src/components/ProjectList/ProjectList.module.scss
+++ b/src/components/ProjectList/ProjectList.module.scss
@@ -31,6 +31,17 @@
     }
   }
 
+  &-no-projects {
+    font-size: 16px;
+
+    &-light {
+      color: $title-color-light;
+    }
+    &-dark {
+      color: $title-color-dark;
+    }
+  }
+
   a {
     text-decoration: none;
   }
