--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -23,4 +23,16 @@
       color: $title-color-dark;
     }
   }
+
+  &-description {
+    font-size: 16px;
+    margin-top: 8px;
+
+    &-light {
+      color: $title-color-light;
+    }
+    &-dark {
+      color: $title-color-dark;
+    }
+  }
 }
